# NLP-exam-Few-NERD

./: .gitignore  README.md  ner_results.csv  ner_results_with_json.csv  ner_results_with_json_metrics.csv  ner_results_with_json_metrics.json  proto-results-eda.ipynb  pyproject.toml  raw_code.py  requirements.txt  train_demo.py
data/: download.sh  download_hf.py
generative/: generative.py  generative_model_selection.py  main.py  quantitative_error_analysis.ipynb
jobs_success/jobs/: env_and_install.sh  final_2_testing_only.sh  final_2_testing_only_79924_0.err  final_2_testing_only_79924_1.err  proto_llama_inter_full_run_79058_0.err  proto_llama_inter_full_run_79058_1.err  proto_llama_inter_full_run_79058_2.err  reinstall.sh  (+3 more)
metrics/: proto-inter-10-1-seed0-llama-lora-inter-10way-1shot.csv  proto-inter-10-5-seed0-llama-lora-inter-10way-5shot.csv  proto-inter-5-1-seed0-llama-lora-inter-5way-1shot.csv  proto-inter-5-1-seed0.csv  proto-inter-5-5-seed0-llama-lora-inter-5way-5shot.csv  sample-data.csv
ner_results_with_json_proto_format/: generative-n10-k1.csv  generative-n5-k1.csv  proto-n10-k1.csv  proto-n10-k5.csv  proto-n5-k1.csv  proto-n5-k5.csv
results_discriminative_models/: proto-inter-10-1-seed0-llama-lora-inter-10way-1shot.csv  proto-inter-10-5-seed0-llama-lora-inter-10way-5shot.csv  proto-inter-5-5-seed0-llama-lora-inter-5way-5shot.csv
results_generative_models/: generative-n10-k5.csv  generative-n5-k5.csv
util/: data_loader.py  data_loader_generative.py  framework.py  parser.py  prompt_testing.py  testing.py  to_proto_format.py  word_encoder.py
