[project]
name = "nlp-exam-few-nerd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19.0,<3.0.0",
    "transformers>=4.30.0,<4.49.0",
    "huggingface-hub>=0.34.0,<1.0.0",
    "nltk>=3.8.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "seqeval>=1.2.2",
]
